--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Excursion</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>Discover hidden places in the world around you</h1>
+  <h2><a href="">Download Excursion (Coming Soon!)</a></h2>
 </body>
 </html>
