Added html and css

--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <title>Excursion</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="resources/css/styles.css">
 </head>
 <body>
   <h1>Discover hidden places in the world around you</h1>
-  <h2><a href="">Download Excursion (Coming Soon!)</a></h2>
+    <br />
+      <h4><a href="">Download Excursion (Coming Soon!)</a></h4>
+      <br />
+        <p><a href="resources/videos/excursion.mp4"></a></p>
+          <p><a href="resources/images/phone.png"></a></p>
+      <br />
+  <h2>Your personal travel guide</h2>
+    <br />
+      <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+    <br />
+      <img src="resources/images/camp.jpg">
+    <br />
+  <h2>Coming Soon for iPhone and Android</h2>
+    <br />
+      <h4><a href="">Download Excursion (Coming Soon!)</a></h4>
+      <br />
+      <p text-align="center">	&copy;Excursion</p>
 </body>
 </html>
