--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <br />
       <h4><a href="">Download Excursion (Coming Soon!)</a></h4>
       <br />
-        <p><a href="resources/videos/excursion.mp4"></a></p>
-          <p><a href="resources/images/phone.png"></a></p>
       <br />
   <h2>Your personal travel guide</h2>
     <br />
@@ -19,10 +17,11 @@
     <br />
       <img src="resources/images/camp.jpg">
     <br />
+    <p><img src="./resources/images/phone.png"></p>
+    <br />
   <h2>Coming Soon for iPhone and Android</h2>
     <br />
       <h4><a href="">Download Excursion (Coming Soon!)</a></h4>
       <br />
-      <p text-align="center">	&copy;Excursion</p>
 </body>
 </html>
