--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Excursion</title>
-  <link rel="stylesheet" href="resources/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
 </head>
 <body>
   <h1>Discover hidden places in the world around you</h1>
     <br />
       <h4><a href="">Download Excursion (Coming Soon!)</a></h4>
       <br />
+        <p><video autoplay muted loop src="./resources/videos/excursion.mp4" type="video/mp4"></video></p>
       <br />
   <h2>Your personal travel guide</h2>
     <br />
@@ -23,5 +24,8 @@
     <br />
       <h4><a href="">Download Excursion (Coming Soon!)</a></h4>
       <br />
+      <div class="copyright">
+      <p>&copy;Excursion</p>
+    </div>
 </body>
 </html>
